# poketrade

./: .gitignore  README.md  package-lock.json  pyproject.toml
backend/: db.sqlite3
backend/apis/: admin.py  models.py  serializers.py  urls.py  views.py
backend/apis/migrations/: 0001_initial.py  0002_alter_customuser_account_balance.py  0003_alter_card_owner_tradeoffer.py
backend/backend/: settings.py  urls.py
frontend/: package-lock.json  package.json
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/components/: AddModelDialog.tsx  AuthenticatedContent.tsx  Card.tsx  CardTrading.tsx  Dashboard.tsx  DashboardSkeleton.tsx  DeleteAccountDialog.tsx  Layout.tsx  ListCardDialog.tsx  LoginForm.tsx  Marketplace.tsx  MyCards.tsx  NavBar.tsx  RegisterForm.tsx  TestModelItem.tsx  Toaster.tsx  TradeDialog.tsx  TradeOffers.tsx
frontend/components/ui/: badge.tsx  button.tsx  card.tsx  tabs.tsx  textarea.tsx  toast.tsx
frontend/contexts/: AuthContext.tsx  ToastContext.tsx
frontend/utils/: api.ts  cards-api.ts
